# gimmemotifs

./: .codeclimate.yml  .gitattributes  .gitignore  .landscape.yaml  .pre-commit-config.yaml  .rtd-environment.yml  .travis.yml  CHANGELOG.md  CITATION.cff  COPYING  ChangeLog  INSTALL  MANIFEST  MANIFEST.in  NEWS  README  README.md  compile_externals.py  conda_env.dev.txt  conda_env.osx.txt  conda_env.test.txt  conda_env.txt  control  control2.5  control2.6  control2.7  fabfile.py  make_deb.py  make_rpm.py  readthedocs.yml  requirements.txt  requirements.yaml  run_tests.py  setup.cfg  setup.py  test.bed  testpp.py  versioneer.py
src/GADEM_v1.3/: 1.seq  2.seq  3.seq  CTCF.txt  ChangeLog  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  gadem.txt  info.done.txt  observedPWMs.txt
src/GADEM_v1.3/autom4te.cache/: output.1  requests  traces.0  traces.1
src/GADEM_v1.3/doc/: AUTHORS  README
src/GADEM_v1.3/examples/: Makefile  Makefile.in  Oct4_ChIP_chip.seq  p53KnownSitesEmbeddedInSimulated.seq  p53_ChIP_PET.seq  run.csh  tmp.seq  weblog.csh
src/GADEM_v1.3/src/: Makefile  Makefile.am  Makefile.in  align_sites.c  alloc.c  alloc.h  background.c  check_convergence.c  check_pwm_dist.c  consensus.c  construct_pwm.c  copy_pwm.c  crossover.c  defines.h  effect_seq_len.c  evalue_meme.c  evalue_meme.h  extend_alignment.c  gadem  gadem.h  initial_population.c  main.c  mask_sites.c  mutation.c  normalization.c  output.c  pwm_score_distr.c  random.h  random_32bits.c  random_64bits.c  read_pwm0.c  read_seq.c  reverse_seq.c  sample_wo_replacement.c  scan_sites.c  score_subsequence.c  selection.c  sort.c  top_kmers.c  transform_pwm.c  (+1 more)
src/meme_4.4.0/: COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
src/meme_4.4.0/doc/: Makefile.am  Makefile.in  README  alphabets.html  alphtype.xml  ama.xml  bfile-format.html  ceqlogo.xml  chen2meme.html  cite.html  clustalw-format.html  clustalw2fasta.html  fasta-get-markov.xml  fasta-io.xml  fimo.xml  glam2-template-header.js  glam2.css  glam2_ref.html  glam2_tut.html  glam2format_man.html  glam2scan_man.html  gomo-format.html  gomo.xml  gomo_highlight.html  install.html  iupac.html  iupac2meme.html  jaspar2meme.html  lipo.meme.html  lipo.meme.stripped.txt  mast.html  mast2txt.html  meme-format.html  meme-install.html  meme-suite-logo.js  meme.dtd  meme.html  mhmm.xml  mhmme.xml  mhmmscan.html  (+17 more)
src/meme_4.4.0/etc/: Makefile.am  Makefile.in  beadstring.xsl  block-diagram.xsl  cisml-to-gff.xsl  cisml.css  db_other_genomes.csv  fimo-to-text.xsl  fimo.sh.in  fimo.xsl  glam2.sh.in  glam2_config.xml.in  gomo.sh.in  gomo.xsl.in  gomo_config.xml.in  logo.js  mast-to-html.xsl  mast.sh.in  mast_config.xml.in  meme-mast.sh.in  meme.css  meme.doc  meme.xsl.in  meme_config.xml.in  prior1.plib  template.eps  xsl-wrapper.in
src/meme_4.4.0/scripts/: Makefile.am  Makefile.in  README  cat_max.txt  chen2meme.pl  compare_dates.txt  convert2html.txt  download  fasta-fetch.txt  fasta-get-markov.txt  fasta-make-index.txt  fasta-shuffle-letters.txt  fasta-unique-names.txt  get_db_csv.txt  glam2html.py  glam2psfm.py  glam2scan2html.py  hartemink2psp.pl  iupac2meme.pl  jaspar2meme.pl  lrun.txt  mailer.txt  meme.txt  metatest.pl  mhmm2html.pl  motif2meme.pm.in  plot-usage  prior_utils.pl  priority2meme.pl  psp-gen.pl  runcheck_p.in  runtests  scpd2meme.pl  tamo2meme.pl  transfac2meme.txt  uniprobe2meme.pl  update-plot-usage.txt  usage-reports
src/meme_4.4.0/src/: Makefile.am  Makefile.in  aa.h  alphabet.c  alphabet.h  ama.c  ama_scan.c  ama_scan.h  array-list.c  array-list.h  array.c  array.h  background.c  background.h  banner.h  beadstring-xml.h  beadstring.c  binary-search.c  build-hmm.c  calculate_p_y.h  ceqlogo.c  ceqlogo.h  cisml-dtd.h  cisml.c  cisml.h  clustalw-io.c  clustalw-io.h  clustalw2fasta.c  curves.h  diagram.h  dir.h  display.c  display.h  display_globals.h  dp.c  dpalign.h  draw-mhmm.c  em.c  evomodel.h  evomodel_with_loss.c  (+127 more)
src/meme_4.4.0/tests/: Makefile.am  Makefile.in  farntrans5.s  lex0.s  lipocalin.s
src/meme_4.4.0/website/: Makefile.am  Makefile.in
src/meme_4.6.0/: AUTHORS  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac
src/meme_4.6.0/doc/: Makefile.am  Makefile.in  alphabets.html  ama.xml  ame.xml  authors.html  beadstring.xml  chen2meme.html  clustalw2phylip.xml  compute-prior-dist.xml  copyright.html  draw-mhmm.xml  dreme.xml  fasta-format.html  fimo.xml  fitevd.xml  gendb.xml  getsize.xml  glam2_alphabet.html  glam2_dirichlet.html  glam2_install.html  glam2_man.html  glam2mask_man.html  godag-format.html  iupac2meme.html  jaspar2meme.html  lipo.linear.all.mhmms  lipo.linear.mhmm  log-hmm.xml  mast.html  mast2txt.html  mcast.xml  meme-chip-tutorial.xml  meme-format.html  meme-install.html  meme-io.xml  meme-suite.css  meme.dtd  meme.html  mhmm-output.html  (+20 more)
src/meme_4.6.0/etc/: Makefile.am  Makefile.in  cisml-to-gff3.xsl  cisml-to-html.xsl  constants.xsl.in  db_general.csv  delay_draw.js  fimo-to-gff3.xsl  fimo-to-html.xsl  fimo-to-wiggle.xsl  fimo.sh.in  fimo_config.xml.in  glam2scan.sh.in  glam2scan_config.xml.in  gomo-to-html.xsl  gomo.sh.in  hmm-text.xsl  mast-to-html.xsl  mast.sh.in  mcast.sh.in  mcast_config.xml.in  meme-chip.txt  meme-chip_config.xml.in  meme-mast.sh.in  meme-to-html.xsl  meme.css  meme.doc  motif_logo.js  spamo-to-html.css  spamo-to-html.js  spamo-to-html.xsl  spamo_config.xml.in  spamo_graph.js  spamo_template.eps  template.eps  timer.sh  tomtom-to-html.xsl  tomtom_config.xml.in  xsl-wrapper.in
src/meme_4.6.0/scripts/: CatList.pm  Makefile.am  Makefile.in  MemeWebUtils.pm.in  MotifUtils.pm  README  ama-qvalues.pl.in  cat_max.pl.in  chen2meme.pl.in  comb-dynamicprog.pl  compare_dates.pl.in  convert2html.pl.in  dreme.py.in  fasta-center.pl.in  fasta-dinucleotide-shuffle.py.in  fasta-get-markov.pl.in  fasta-hamming-enrich.py.in  fasta-make-index.pl.in  fasta-shuffle-letters.pl.in  fasta-subsample.pl.in  fasta-unique-names.pl.in  get_db_csv.pl.in  glam2html.py.in  glam2scan2html.py.in  lrun.csh.in  (+34 more)
(+1695 files in other folders)
