[metadata]
description-file = README.md

[bdist_rpm]
packager = Simon van Heeringen <simon.vanheeringen@gmail.com>
requires = python-py, scipy, python-pp, python-kid, python-matplotlib
build-requires = gsl-devel, gcc, compat-gcc-34, perl-ExtUtils-MakeMaker
provides = perl(Algorithm::Cluster), /bin/perl 
